styles/style.css
.page {
  font-family: var(--font-family), monospace;
  font-size: 18px;
  padding: var(--main-padding);
  color: var(--text-color);
  background-image: var(--cover-image);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
}

.title-decor {
  color: var(--title-decor-color);
  background-color: var(--title-decor-background-color);
  font-size: 18px;
  font-weight: bold;
  line-height: 130%;
}

.title-normal {
  font-weight: normal;
}

.link {
  text-shadow: 2px 2px 0 var(--accent-color);
  text-decoration: none;
}

.link:hover {
  border-bottom: 1px solid currentColor;
}

.link:focus {
  outline: none;
}

.link:focus-visible {
  outline: 1px solid currentColor;
}

/*HEADER*/

.header {
  min-block-size: calc(100vh - 2 * var(--main-padding));
  display: grid;
  grid-template-rows: auto max-content auto;
  align-items: center;
}

.decorated-zone {
  position: relative;
}

.decorated-zone::before {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  inline-size: 25px;
  block-size: 25px;
  border-top: 1px solid var(--decorated-zone-color);
  border-right: 1px solid var(--decorated-zone-color);
}

.decorated-zone::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  inline-size: 25px;
  block-size: 25px;
  border-bottom: 1px solid var(--decorated-zone-color);
  border-left: 1px solid var(--decorated-zone-color);
}

.rec {
  position: absolute;
  display: flex;
  align-items: center;
  gap: var(--space-s);
  top: 1px;
  right: 11px;
  font-size: 18px;
  color: var(--accent-color);
}

.theme-light .rec {
  display: none;
}

.rec::after {
  content: "";
  display: inline-block;
  inline-size: 7px;
  block-size: 7px;
  border-radius: 50%;
  background-color: var(--accent-color);
  box-shadow: 0 0 5px 4px var(--accent-color);
}

.header__theme-menu {
  justify-self: end;
  margin: 10px 0 0;
}

.header__theme-menu-list {
  display: flex;
  flex-direction: column;
  gap: 13px;
}

@media (width >= 1024px) {
  .header__theme-menu {
    justify-self: center;
    align-self: self-start;
    margin: 0;
  }
  .header__theme-menu-list {
    flex-direction: row;
  }
}

.header__theme-menu-button {
  padding: 2px 13px;
  line-height: 1;
  color: var(--button-color);
  background: transparent;
  border: none;
  text-transform: lowercase;
  cursor: pointer;
  outline: 1px solid transparent;
}

.header__theme-menu-button:hover {
  outline-color: var(--accent-color-alpha);
}

.header__theme-menu-button:focus {
  outline: none;
}

.header__theme-menu-button:focus-visible {
  border-bottom: 1px solid var(--button-color);
  outline: none;
}

.header__theme-menu-button_active {
  outline: 1px solid var(--button-color);
  pointer-events: none;
}

.header__title {
  font-size: var(--title-font-size-mobile);
  line-height: 0.83;
  color: var(--title-color);
  text-shadow: 4px 4px 0 var(--accent-color);
  margin: 15px 0 0;
  justify-self: start;
}

@media (width >= 768px) {
  .header__title {
    font-size: var(--title-font-size-desktop);
    margin: 16px 0 0 -20px;
  }
}

@media (width >= 1024px) {
  .header__title {
    margin: 45px 0 0 -20px;
  }
}

.header__subtitle {
  justify-self: end;
  max-inline-size: 355px;
  padding-inline-end: 50px;
}

@media (width >= 768px) {
  .header__subtitle {
    max-inline-size: 364px;
  }
}

@media (width >= 1024px) {
  .header__subtitle {
    padding-inline-end: 0;
    max-inline-size: 491px;
  }
}

/* Sections */

.section {
  margin-block-start: var(--section-gap-mobile);
}

@media (width >= 768px) {
  .section {
    margin-block-start: var(--section-gap-desktop);
  }
}

.section__title {
  color: var(--section-title-color);
  font-size: 18px;
  font-weight: bold;
  line-height: 130%;
}

.card {
  display: flex;
  flex-direction: column;
  gap: var(--space-s);
  line-height: 130%;
}

/* Why */

.why {
  display: grid;
  grid-template-rows: max-content 1fr;
  gap: var(--space-m);
}

.why__content {
  display: grid;
  gap: var(--space-m);
}

@media (width >= 768px) {
  .why {
    grid-template-rows: initial;
    grid-template-columns: 1fr 2fr;
  }
}

/* What */

.what {
  display: grid;
  grid-template-rows: max-content 1fr;
  gap: var(--space-m);
}

.what__content {
  display: grid;
  gap: var(--space-m);
}

@media (width >= 768px) {
  .what {
    grid-template-columns: 1fr 2fr;
  }
  .what__content {
    grid-row: 2;
    grid-column: 1 / -1;
  }
}

@media (width >= 1024px) {
  .what__content {
    grid-template-columns: repeat(3, 1fr);
  }
}

/* How */

.how {
  display: grid;
  grid-template-rows: max-content 1fr;
  gap: var(--space-m);
}

.how__content {
  display: grid;
  gap: var(--space-m);
}

@media (width >= 768px) {
  .how {
    grid-template-rows: initial;
    grid-template-columns: 1fr 2fr;
  }
}

/* Gallery */

.gallery {
  display: grid;
  gap: var(--space-s);
}

.gallery__content {
  display: grid;
  gap: var(--space-s);
}

.gallery__image {
  inline-size: 100%;
  block-size: 100%;
  object-fit: cover;
}

@media (width >= 768px) {
  .gallery {
    gap: var(--space-m);
  }

  .gallery__content {
    gap: var(--space-m);
    grid-template-rows: repeat(3, fit-content);
    grid-template-columns: repeat(3, 1fr);
  }

  .gallery__image:nth-child(1) {
    grid-column: 1 / span 2;
    grid-row: 1;
  }

  .gallery__image:nth-child(2) {
    grid-column: 3;
    grid-row: 1 / span 2;
  }

  .gallery__image:nth-child(3) {
    grid-column: 1;
    grid-row: 2 / span 2;
  }

  .gallery__image:nth-child(4) {
    grid-column: 2;
    grid-row: 2;
  }

  .gallery__image:nth-child(5) {
    grid-column: 2 / span 2;
    grid-row: 3;
  }
}

/* Footer */

.footer {
  margin-block-start: var(--section-gap-mobile);
  min-block-size: calc(100vh - 2 * var(--main-padding));
  display: grid;
  align-items: center;
  justify-items: center;
}

.footer__title {
  font-size: var(--title-font-size-mobile);
  line-height: 0.83;
  color: var(--title-color);
  text-shadow: 2px 2px 0 var(--accent-color);
}

@media (width >= 768px) {
  .footer {
    margin-block-start: var(--section-gap-desktop);
  }
  .footer__title {
    font-size: var(--title-font-size-desktop);
  }
}

